--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,42 +1,44 @@
-name: Build and Zip Extension
+name: Build and Publish Latest
 
-# Trigger on push to main branch
 on:
   push:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the code from the repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Install Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Use a version compatible with your project
+          node-version: '20'
 
-      # Step 3: Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      # Step 4: Run your build script
       - name: Build extension
         run: npm run build
 
-      # Step 5: Zip the 'dist' folder
-      # Change 'dist' below if your build output folder has a different name
+      # Zip dist folder into 'ai_dj_cara.zip'
       - name: Zip output
         run: cd dist && zip -r ../ai_dj_cara.zip .
 
-      # Step 6: Upload the zip file so you can download it
-      - name: Upload Build Artifact
-        uses: actions/upload-artifact@v4
+      # Upload 'ai_dj_cara.zip' to the Release section
+      - name: Update Release
+        uses: ncipollo/release-action@v1
         with:
-          name: chrome-extension-build
-          path: ai_dj_cara.zip
+          artifacts: "ai_dj_cara.zip"
+          tag: "latest"
+          name: "Latest Build (ai_dj_cara)"
+          body: "This release is automatically updated with the latest code from the main branch."
+          allowUpdates: true
+          removeArtifacts: true
+          makeLatest: true
